--- a/.github/workflows/cpp-ci.yml
+++ b/.github/workflows/cpp-ci.yml
@@ -25,9 +25,24 @@ jobs:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v3
 
+      - name: Cache C++ packages
+        id: cache-cpp
+        uses: actions/cache@v3
+        with:
+          path: |
+            build/packages
+          key: cache-cpp-all
+          restore-keys: |
+            cache-cpp-all
+      
+      - if: ${{ steps.cache-cpp.outputs.cache-hit != 'true' }}
+        name: Report cache state
+        continue-on-error: true
+        run: echo Cache miss
+
       # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: echo Hello, world!
+      #- name: Run a one-line script
+      #  run: echo Hello, world!
 
       # Runs a set of commands using the runners shell
       #- name: Run a multi-line script
@@ -36,7 +51,7 @@ jobs:
       #    echo test, and deploy your project.
       
       - name: CMake configure
-        run: cmake -S . -B build -G "Visual Studio 17 2022" -A x64
+        run: cmake -S . -B build -G "Visual Studio 17 2022" -A x64 -DCPM_SOURCE_CACHE=build/packages
       
       - name: CMake build
         run: cmake --build build --target main --config Release
