--- a/.github/workflows/cpp-ci.yml
+++ b/.github/workflows/cpp-ci.yml
@@ -55,3 +55,6 @@ jobs:
       
       - name: CMake build
         run: cmake --build build --target main --config Release
+        
+      - name: Test
+        run: build/bin/main.exe
